@@ -40,6 +40,7 @@ static int _indent = 1;
 static int _log_cmd_name = 0;
 static int _log_suppress = 0;
 static int _ignorelockingfailure = 0;
+static int _lockingfailed = 0;
 static int _security_level = SECURITY_LEVEL;
 static char _cmd_name[30] = "";
 static char _msg_prefix[30] = "  ";
@@ -160,6 +161,11 @@ void init_ignorelockingfailure(int level)
 	_ignorelockingfailure = level;
 }
 
+void init_lockingfailed(int level)
+{
+	_lockingfailed = level;
+}
+
 void init_security_level(int level)
 {
 	_security_level = level;
@@ -212,6 +218,11 @@ int pvmove_mode()
 int full_scan_done()
 {
 	return _full_scan_done;
+}
+
+int lockingfailed()
+{
+	return _lockingfailed;
 }
 
 int ignorelockingfailure()
